--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -12,41 +12,51 @@
           <form class="text-center" style="color: #757575;" action="#!">
             <div class="row">
               <div class="col-lg-6">
-                <mat-form-field appearance="outline" class="w-100">
-                  <mat-label>Enter First Name</mat-label>
-                  <input matInput  type="text" [(ngModel)]="signUpBody.data.customerData.fName" required>
-                  <mat-hint *ngIf="!signUpBody.data.customerData.fName">{{fnameError}}</mat-hint>
-                </mat-form-field>
+                <div class="form-group mb-0">
+                  <label class="pure-material-textfield-outlined w-100">
+                    <input placeholder=" " type="text" [(ngModel)]="signUpBody.data.customerData.fName" required>
+                    <span>First Name</span>
+                    <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.fName">{{fnameError}}</p>
+                  </label>
+                </div> 
               </div>
               <div class="col-lg-6">
-                <mat-form-field appearance="outline" class="w-100">
-                  <mat-label>Enter Last Name</mat-label>
-                  <input matInput  type="text" [(ngModel)]="signUpBody.data.customerData.lName" required>
-                  <mat-hint *ngIf="!signUpBody.data.customerData.lName">{{fnameError}}</mat-hint>
-                </mat-form-field>
-
+                <div class="form-group mb-0">
+                  <label class="pure-material-textfield-outlined w-100">
+                    <input placeholder=" " type="text" [(ngModel)]="signUpBody.data.customerData.lName" required>
+                    <span>Last Name</span>
+                    <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.lName">{{fnameError}}</p>
+                  </label>
+                </div>
               </div>
             </div>
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Enter Email</mat-label>
-              <input matInput  type="text" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="50" [(ngModel)]="signUpBody.data.customerData.eMail" required>
-              <mat-hint *ngIf="!signUpBody.data.customerData.eMail">{{emailError}}</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Enter Mobile No.</mat-label>
-              <input matInput   name="phoneNumbers"  type="text" appOnlyNumber [(ngModel)]="signUpBody.data.customerData.tel"  maxlength="10" required>
-              <mat-hint *ngIf="!signUpBody.data.customerData.tel">{{tellError}}</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Enter Password</mat-label>
-              <input matInput name="password"  maxlength="20" [type]="hide ? 'password' : 'text'" id="typepass" [(ngModel)]="password" required >
-              <button class="bg-transparent border-0" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-              </button>
-              <mat-hint *ngIf="!password">{{passwordError}}</mat-hint>
-            </mat-form-field>
+            <div class="form-group mb-0">
+              <label class="pure-material-textfield-outlined w-100">
+                <input placeholder=" " type="text" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="50" [(ngModel)]="signUpBody.data.customerData.eMail" required>
+                <span>Enter Email</span>
+                <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.eMail">{{emailError}}</p>
+              </label>
+            </div>
+            <div class="form-group mb-0">
+              <label class="pure-material-textfield-outlined w-100">
+                <input placeholder=" " type="text" appOnlyNumber [(ngModel)]="signUpBody.data.customerData.tel"  maxlength="10" required>
+                <span>Enter Mobile No.</span>
+                <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.tel">{{tellError}}</p>
+              </label>
+            </div>
+            <div class="form-group mb-0">
+              <label class="pure-material-textfield-outlined w-100 password-view">
+                <input placeholder=" " maxlength="20" [type]="hide ? 'password' : 'text'" id="typepass" [(ngModel)]="password" required>
+                <span>Enter Password</span>
+                <div class="icon">
+                  <span class="visible"><mat-icon>visibility</mat-icon></span>
+                  <span class="not-visible"><mat-icon>visibility_off</mat-icon></span>
+                </div>
+                <p class="text-danger mb-0" *ngIf="!password">{{visibility_off}}</p>
+              </label>
+            </div>
+            
+            
 
             <button *ngIf="!flags.isOtpSent" matRipple class="btn btn-success btn-block mt-3"  (click)="sendOtp()">{{flags.isRegister?'Hold On...':'Sign Up'}}</button>
 
