--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -51,8 +51,8 @@
             </div>
             <div *ngIf="!isLogin">
               <button type="button" class="btn btn-primary dropdown-toggle">
-                <!-- <aside data-fancybox data-src="#loginModal" id="openLoginModalBtn"><b class="ml-1">Login</b></aside> -->
-                <a href="javascript:void(0);" data-toggle="modal" data-target="#loginModal">Login</a>
+                 <!--<aside data-fancybox data-src="#loginModal" id="openLoginModalBtn"><b class="ml-1">Login</b></aside>-->
+                <a href="javascript:void(0);" data-toggle="modal" id="openLoginModalBtn" data-target="#loginModal">Login</a>
               </button>
             </div>
           </div>
