--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -59,11 +59,11 @@
             </div>
             <div class="form-group mb-0">
               <label class="pure-material-textfield-outlined w-100 password-view">
-                <input placeholder=" " name="password"  maxlength="20" [type]="hide ? 'password' : 'text'" id="typepass" [(ngModel)]="password" required>
+                <input placeholder=" " name="password"  maxlength="20" [type]="hide ? 'password' : 'text'" id="typepass3" [(ngModel)]="password" required>
                 <span>Enter Password</span>
-                <div class="icon">
-                  <span class="visible"><mat-icon>visibility</mat-icon></span>
-                  <span class="not-visible"><mat-icon>visibility_off</mat-icon></span>
+                <div  class="icon">
+                  <span *ngIf="!visiblePass"  style="cursor: pointer" title="Show Password" (click)="myFunction()" class="visible"><mat-icon>visibility</mat-icon></span>
+                  <span *ngIf="visiblePass" style="cursor: pointer" title="Hide Password" class="not-visible" (click)="myFunction()"><mat-icon>visibility_off</mat-icon></span>
                 </div>
                 <p class="text-danger mb-0" *ngIf="!password">{{visibility_off}}</p>
               </label>
