--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
@@ -355,7 +355,7 @@
                         <a href="javascript:void(0);"><small><strong>For Media Inquiries, Please contact :</strong> bellymelly@interdependence.com</small></a>
                     </li>
                     <li>
-                      <a href="https://bellymelly.com/contact.html"><small><i class="fa fa-map-marker mr-2"></i>Contact Us </small></a>  
+                      <a href="mailto:support@bellymelly.com"><small><i class="fa fa-map-marker mr-2"></i>Contact Us </small></a>
                   </li>
                 </ul>
             </div>
