--- a/src/app/restaurent/pages/login/login.component.html
+++ b/src/app/restaurent/pages/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h2>Welcome Back! Please Sign In</h2>
-        <h6>New to BellyMelly? <a href="javascript:void(0);" data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
+        <h6>New to BellyMelly? <a  data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
       </div>
       <div class="modal-body">
         <div class="modal-inner">
@@ -41,11 +41,11 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h2>Welcome Back! Please Sign In</h2>
-        <h6>New to BellyMelly? <a href="javascript:void(0);" data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
+        <h6>New to BellyMelly? <a data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
       </div>
       <div class="modal-body">
         <div class="modal-inner">
-          <h6 class="font-weight-normal text-muted text-center">Go Back to <a href="javascript:void(0);" data-toggle="modal" data-target="#loginModal" data-dismiss="modal" class="text-link font-weight-bold text-dark" style="color: #0d95e8 !important;">Social Login</a></h6>
+          <h6 class="font-weight-normal text-muted text-center">Go Back to <a  data-toggle="modal" data-target="#loginModal" data-dismiss="modal" class="text-link font-weight-bold text-dark" style="color: #0d95e8 !important;">Social Login</a></h6>
           <!-- Form -->
           <form #loginForm="ngForm" *ngIf="!loginUserData">
             <div class="form-group mb-0">
@@ -97,11 +97,11 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h2>Reset Your Password</h2>
-        <h6>New to BellyMelly? <a href="javascript:void(0);" data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
+        <h6>New to BellyMelly? <a  data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
       </div>
       <div class="modal-body">
         <div class="modal-inner">
-          <h6 class="font-weight-normal text-muted text-center">Go Back to <a href="javascript:void(0);" data-toggle="modal" data-target="#loginModal" data-dismiss="modal" class="text-link font-weight-bold text-dark" style="color: #0d95e8 !important;">Social Login</a></h6>
+          <h6 class="font-weight-normal text-muted text-center">Go Back to <a  data-toggle="modal" data-target="#loginModal" data-dismiss="modal" class="text-link font-weight-bold text-dark" style="color: #0d95e8 !important;">Social Login</a></h6>
           <!-- Form -->
           <form #forgotSendForm="ngForm">
             <div class="form-group mb-0">
