--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -79,7 +79,8 @@
 							<h5 class="text-white" *ngIf="orderData.ServiceId == 1">{{locationDetails.Services[0].ReadyIn}}</h5>
 							<h5 class="text-white" *ngIf="orderData.ServiceId == 2">{{locationDetails.Services[1].ReadyIn}}</h5>
 							<h5 class="text-white" *ngIf="orderData.ServiceId == 3">{{locationDetails.Services[2].ReadyIn}}</h5>
-							<h5 class="text-white" *ngIf="orderData.ServiceId == 5">{{locationDetails.Services[3].ReadyIn}}</h5>
+							<h5 class="text-white" *ngIf="orderData.ServiceId == 5"><p *ngIf="locationDetails.Services[3]">{{locationDetails.Services[3].ReadyIn}} </p>
+								<p *ngIf="locationDetails.Services[2] && !locationDetails.Services[3]">{{locationDetails.Services[2].ReadyIn}} </p></h5>
 
 						</div>
 						<div class="col-6">
@@ -161,7 +162,7 @@
 						<button class="btn btn-site">Contact Restaurant on {{locationDetails.Tel}}</button>
 					</div>
 					<div class="col-6 px-1">
-						<button class="btn btn-site" *ngIf="orderData.ServiceId != 5" style="color: white"><a href="{{host}}" style="color: white">Start New Order</a></button>
+						<button class="btn btn-site" *ngIf="orderData.ServiceId != 5" style="color: white"><a [routerLink]="  '/' + mobUrl" style="color: white">Start New Order</a></button>
 						<button class="btn btn-site" *ngIf="orderData.ServiceId == 5" ><a href="{{host}}/{{country}}/{{mobUrl}}#dinein" style="color: white">Start New Order</a></button>
 					</div>
 					
