--- a/src/app/restaurent/pages/register/register.component.scss
+++ b/src/app/restaurent/pages/register/register.component.scss
@@ -180,10 +180,10 @@
     margin-bottom: 0px;
   }
 }
-.modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+// .modal {
+//   overflow-x: hidden;
+//   overflow-y: auto;
+// }
 li{
   line-height: 15px;
 }
