--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,9 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+body.modal-open {
+  overflow: hidden;
+}
 h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6{
   font-family: 'Poppins', sans-serif !important;
@@ -872,9 +875,9 @@ nb-checkbox {
 .btn-site:hover{
   color: #fff;
 }
-.modal-backdrop {
-  z-index: 1039;
-}
+// .modal-backdrop {
+//   z-index: 1039;
+// }
 .material-icons{
   font-size: 1.5rem;
 }
